[package]
name = "tokio-db"
version = "0.1.0"
authors = ["inv2004"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }
hyper = "0.12.32"
tokio = "0.1.22"
chashmap = "2.2.2"
actix-web = "1.0.3"
